# tuke-engine

./: .clang-format  .clangd  .gitignore  .ignore  CMakeLists.txt  readme.md
app/linalg_test/: linalg_test.cpp
app/og_main/: main.cpp
app/opengl_test/: opengl_test.cpp  opengl_test.h
app/pong/: main.cpp  pong.cpp  pong.h  readme.md
app/top_down_something/: bullet_hell.h  main.cpp  topdown.h
app/vulkan_test/: 01_triangle.cpp  02_uniform_triangle.cpp  03_textured_quad.cpp  04_depth_test.cpp  05_phong_lighting.cpp  TODO.md  vulkan_test.cpp  vulkan_test.h  vulkan_test_common.h
reflector/: Cargo.toml  TODO.md  codegen.cpp  codegen.h  filesystem_utils.cpp  filesystem_utils.h  main.cpp  parser.cpp  parser.h  reflection_data.h  reflector.h  subprocess.cpp  subprocess.h
reflector/src/: filesystem_utils.rs  lexer.rs  main.rs  reflector.rs
scripts/: build.py  compile_shaders.py  test_compile_shaders.py
shaders/: fragment.glsl  player_fragment.glsl  player_vertex.glsl  simple_cube_fragment.glsl  simple_cube_vertex.glsl  tilemap_fragment.glsl  tilemap_vertex.glsl  vertex.glsl
shaders/common/: basic_lighting.frag.inasdf  billboard.frag.in  billboard.vert.in  colored_pos.frag.in  colored_pos.vert.in  cube.frag.in  cube.vert.in  fullscreen_quad.frag.in  fullscreen_quad.vert.in  hardcoded_triangle.frag.in  hardcoded_triangle.vert.in  instanced_quad.frag.in  instanced_quad.vert.in  phong.frag.in  phong.vert.in  player.frag.in  player.vert.in  simple.frag.in  simple.vert.in  square.frag.in  square.vert.in  textured_quad_bringup.frag.in  textured_quad_bringup.vert.in  tilemap.frag.in  tilemap.vert.in  triangle_bringup.frag.in  triangle_bringup.vert.in  ui_quad.frag.in  ui_quad.vert.in  uniform_bringup.vert.in
shaders/pong/: background.frag.in  background.vert.in  main_menu.frag.in  paddle.frag.in  paddle.vert.in  pong.vert.in
shaders/topdown/: arena.frag.in  arena.vert.in  bullet.frag.in  bullet.vert.in  bullet_hell_overlay.frag.in  bullet_hell_player.frag.in  bullet_hell_player.vert.in  enemy.frag.in  enemy.vert.in  overworld_overlay.frag.in  overworld_overlay.vert.in  overworld_player.vert.in  overworld_vision_cone.frag.in  overworld_vision_cone.vert.in
src/: CMakeLists.txt  assets.h  billboard_manager.h  camera.cpp  camera.h  generated_shader_utils.cpp  generated_shader_utils.h  gl.c  glfw_vulkan.h  hashmap.h  linalg.cpp  linalg.h  main.c  main.cpp  opengl_base.cpp  opengl_base.h  physics.cpp  physics.h  player.cpp  player.h  renderer.cpp  renderer.h  scene_manager.h  sdl_vulkan.h  shaders.cpp  shaders.h  statistics.cpp  statistics.h  stb_image_resize2.h  tilemap.cpp  tilemap.h  transform.cpp  transform.h  tuke_engine.h  utils.cpp  utils.h  vulkan_base.cpp  vulkan_base.h  vulkan_test.cpp  window.cpp  (+1 more)
src/vulkan/: CMakeLists.txt  TODO.md  vulkan_base.cpp  vulkan_base.h
